--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,9 +5,10 @@ title: string;
 body: string;
 url: string;
 dark?: boolean;
+name?:string;
 }
 
-const { title, body, url, dark = false } = Astro.props as Props
+const { title, body, url,  dark = false } = Astro.props as Props
 ---
 
 <div class={`card ${dark && 'dark'}`}>
