--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,11 +2,13 @@
 const {title} = Astro.props;
 
 ---
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <body>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="CALI Reads is a project funded by the Office of Special Education in partnership with the California Department of Education, Special Education Division. The project is coordinated and administered through the Napa County Office of Education. ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" href='../fonts/Poppins/poppins-regular-webfont.woff2' as="font" type="font/woff2" crossorigin>
