--- a/src/components/MediaButton.astro
+++ b/src/components/MediaButton.astro
@@ -9,10 +9,10 @@ url: string;
 const { title,  url} = Astro.props as Props
 ---
 
-<div class='mediaBtn'>
+<button class='mediaBtn'>
 <h3><a href={url} >{title}</a></h3>
 
-</div>
+</button>
 <style>
 
 .mediaBtn {
