--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -21,6 +21,7 @@ import Button from './Button.astro';
 import MediaButton from './MediaButton.astro';
 import LaunchButton from './LaunchButton.astro';
 import HTMLButton from './HTMLButton.astro';
+import HoverButton from './HoverButton.astro';
 export interface Props {
 
 title: string;
