modified HTML Buttons

--- a/src/components/HTMLButton.astro
+++ b/src/components/HTMLButton.astro
@@ -7,9 +7,7 @@ import RArrow from '../images/SVG/RArrow.svg';
 
         <a href={url}  >
         <span class='articleContent'>
-            <!--
-              <span><img src={LaunchSVG} width='90px'/></span>
-             -->
+          <span><img src={LaunchSVG} width='66px' height='100%'/></span>
             <h3><span class='articleHeader'>{buttonText}</span></h3>
         </span>
         </a>
